--- a/pedidos-backend/pedidos/pom.xml
+++ b/pedidos-backend/pedidos/pom.xml
@@ -14,11 +14,16 @@
     <name>pedidos</name>
     <description>Microsserviços desafio fullstack developer</description>
 
-<!--    <properties>-->
-<!--        <java.version>11</java.version>-->
-<!--    </properties>-->
+    <properties>
+        <java.version>11</java.version>
+    </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>br.com.maximatech</groupId>
+            <artifactId>core</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
