Corrige organização dos módulos

--- a/pedidos-backend/pom.xml
+++ b/pedidos-backend/pom.xml
@@ -16,6 +16,7 @@
 
     <modules>
         <module>pedidos</module>
+        <module>core</module>
     </modules>
 
     <properties>
@@ -83,13 +84,13 @@
         </dependencies>
     </dependencyManagement>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
+<!--    <build>-->
+<!--        <plugins>-->
+<!--            <plugin>-->
+<!--                <groupId>org.springframework.boot</groupId>-->
+<!--                <artifactId>spring-boot-maven-plugin</artifactId>-->
+<!--            </plugin>-->
+<!--        </plugins>-->
+<!--    </build>-->
 
 </project>
