--- a/pedidos-backend/pedidos/src/main/resources/application.yml
+++ b/pedidos-backend/pedidos/src/main/resources/application.yml
@@ -1,8 +1,9 @@
-
 server:
   port: 8082
 
 eureka:
+  instance:
+    prefer-ip-address: true
   client:
     service-url:
       defaultZone: http://localhost:8081/eureka/
